vlib/v/checker/tests/fn_param_import_sym_conflict.vv
import arrays
import maps
import strings as strs

// FnDecl
fn x(arrays []int) {
}

fn maps() {
}

fn maps(arrays []int) {
}

fn strings() {
}

fn strs() {
}

// FnDecl with receiver
struct Foo {}

fn (arrays Foo) x() {
}

fn (arrays Foo) y(maps []int) {
}

fn (foo Foo) z(arrays []int) {
}

fn (arrays Foo) maps() {
}

fn (foo Foo) arrays() {
}

fn (foo Foo) strings() {
}

fn (foo Foo) strs() {
}

// AnonFn
fn y() {
	_ := fn (arrays []int) {}
}
